<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pickerText"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/dummy_time"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/timePicker"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/select_time"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/datePicker"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/select_date"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/monthPicker"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/select_month"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/yearPicker"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/select_year"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/rangePicker"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/select_range"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>